feat: invoice  swagger doc #0
