# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/invoice": {
+        "/v1/api/invoice/": {
             "get": {
                 "description": "Retrieve all invoice.",
                 "consumes": [
@@ -17,6 +17,15 @@
                     "Invoice"
                 ],
                 "summary": "Get all invoice",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "X-User-Id",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successfully retrieved the invoices",
@@ -45,7 +54,7 @@
                 }
             }
         },
-        "/invoice/{id}": {
+        "/v1/api/invoice/{id}": {
             "get": {
                 "description": "Retrieve an invoice using its unique ID.",
                 "consumes": [
@@ -59,6 +68,13 @@
                 ],
                 "summary": "Get invoice by ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "X-User-Id",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Invoice ID",
